refactor(collection): pick/pass 조회 쿼리 2회 → 1회로 최적화 [WAPO-66]